--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "This package contains what you need to start developing a Fragments application",
     "license": "AGPL-3.0-or-later",
     "require": {
-      "crimsonking/fragments": "@dev"
+      "crimsonking/fragments": "^0.3"
     },
     "autoload": {
         "psr-4": {
